@@ -23,8 +23,7 @@
     <File name="./src/ServiceLocator.cs" subtype="Code" buildaction="Compile" />
     <File name="./src/ComplexMenuItem.cs" subtype="Code" buildaction="Compile" />
     <File name="./src/GiverMenuItem.cs" subtype="Code" buildaction="Compile" />
-    <File name="./src/PayloadInfo.cs" subtype="Code" buildaction="Compile" />
-    <File name="./src/ReceivingHandler.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/RequestHandler.cs" subtype="Code" buildaction="Compile" />
     <File name="./src/SendingHandler.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
