@@ -17,8 +17,7 @@ CSFILES = \
 	$(srcdir)/GiverMenuItem.cs \
 	$(srcdir)/GiverService.cs \
 	$(srcdir)/Logger.cs \
-	$(srcdir)/PayloadInfo.cs \
-	$(srcdir)/ReceivingHandler.cs \
+	$(srcdir)/RequestHandler.cs \
 	$(srcdir)/SendingHandler.cs \
 	$(srcdir)/ServiceLocator.cs \
 	$(srcdir)/TrayLib.cs \
