@@ -1,5 +1,16 @@
 2007-06-26  Calvin Gaisford <calvinrg@gmail.com> 
 
+	* src/SendingHandler.cs: Sends files
+	* src/RequestHandler.cs: Receives files
+	* src/GiverService.cs: removed unneeded string
+	* src/Application.cs: Added new handlers for new classes
+	* src/Makefile.am: new files
+	* src/PayloadInfo.cs: no longer needed
+	* src/ReceivingHandler.cs: renamed to Request Handler
+	* giver.mdp: Changed around some files
+
+2007-06-26  Calvin Gaisford <calvinrg@gmail.com> 
+
 	* src/GiverService.cs, src/Application.cs, src/ServiceLocator.cs,
 	  src/SendingHandler.cs, src/ReceivingHandler.cs: Moved the socket
 	  communication over to http
